# flow-X

./: .gitignore  AI_PYTHON_GUIDE.md  ANDROID_APK_REPORT.md  Cargo.toml  Cargo.toml.patch  DESKTOP_PRD.md  ENHANCEMENT_REPORT.md  NEXT.md  PRD.md  QUICKSTART.md  README.md  STATUS.md  flowx.toml
.cargo/: config.toml
.github/workflows/: build-android.yml  build-desktop.yml
android-app/: README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
android-app/src/main/: AndroidManifest.xml
android-app/src/main/kotlin/com/flowx/automation/: FlowXService.kt
android-app/src/main/res/values/: strings.xml
android-app/src/main/res/xml/: accessibility_service_config.xml
archive/: ENHANCEMENTS.md  NEXT.md  NLP_QUICKSTART.md  QUICKSTART.md  STATUS.md
archive/docs/development/: DEV-001-Rust核心引擎.md  DEV-003-视觉能力模块.md  DEV-004-Python-FFI绑定.md
crates/flowx-cli/: Cargo.toml
crates/flowx-cli/src/: main.rs
crates/flowx-core/: Cargo.toml
crates/flowx-core/examples/: test_android_connection.rs
crates/flowx-core/src/: element.rs  gesture.rs  lib.rs  multi_device.rs
crates/flowx-core/src/ai/: agent.rs  executor.rs  mod.rs  planner.rs  prompts.rs  vision_model.rs
crates/flowx-core/src/ai/models/: base.rs  config.rs  mod.rs  multimodal.rs
crates/flowx-core/src/ai/utils/: action.rs  image.rs  mod.rs
crates/flowx-core/src/device/: mod.rs
crates/flowx-core/src/engine/: command.rs  executor.rs  mod.rs  types.rs
crates/flowx-core/src/scripting/: autojs.rs  js_runtime.rs  mod.rs
crates/flowx-core/src/utils/: geometry.rs  mod.rs  retry.rs
crates/flowx-core/src/vision/: color.rs  mod.rs  ocr.rs  template_match.rs
crates/flowx-desktop/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
crates/flowx-desktop/src/: App.css  App.tsx
crates/flowx-desktop/src-tauri/: Cargo.toml  Cargo.toml.bak  tauri.conf.json
crates/flowx-desktop/src-tauri/icons/: create_icons.py
crates/flowx-desktop/src-tauri/src/: main.rs
crates/flowx-python/: Cargo.toml  README.md  example.py  pyproject.toml
crates/flowx-python/src/: ai.rs  device.rs  executor.rs  lib.rs
docs/: API.md  CONTRIBUTING.md  README.md
docs/architecture/: ARCH-001-开发日志.md  ARCH-001-系统架构设计.md  ARCH-002-统一指令集设计.md  CROSS_PLATFORM_PLAN.md
docs/development/: DEV-005-JavaScript运行时.md  DEV-006-AutoJS兼容层.md
examples/: ai_demo.py
runtime/autojs/: README.md  app.js  examples.js  global.js  selector.js
scripts/: nlp_engine.py  nlp_engine_v2.py  search_nvidia.py  start_llm.sh  test_all.py  test_android_websocket.py  test_cli.py  test_e2e.py  test_enhancements.py  test_macos.py  test_macos_edge.py  test_nlp.py  test_nlp_final.py  test_opencv.py
