[workspace]
resolver = "2"
members = [
    "crates/flowx-core",
    "crates/flowx-cli",
    "crates/flowx-desktop/src-tauri",
    "crates/flowx-python",
]
exclude = ["crates/flowx-desktop"]

default-members = [
    "crates/flowx-core",
    "crates/flowx-cli",
    "crates/flowx-desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/flowx/flowx"
authors = ["FlowX Contributors"]
categories = ["date-and-time"]
keywords = ["date", "time", "calendar", "duration"]
description = "Date and time library"
homepage = "https://github.com/flowx/flowx"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

[patch.crates-io]
time = { git = "https://github.com/time-rs/time.git", tag = "v0.3.49" }
time-core = { git = "https://github.com/time-rs/time.git", tag = "v0.3.49" }
time-macros = { git = "https://github.com/time-rs/time.git", tag = "v0.3.49" }
