[package]
name = "flowx-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
flowx-core = { path = "../flowx-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
