[package]
name = "flowx-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["ai"]
vision = ["opencv", "image"]
ocr = ["vision", "tesseract"]
ai = ["reqwest", "base64", "toml"]

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
regex = "1.10"
opencv = { version = "0.88", features = ["imgproc", "imgcodecs"], optional = true }
image = { version = "0.24", optional = true }
tesseract = { version = "0.13", optional = true }
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
base64 = { version = "0.21", optional = true }
toml = { version = "0.8", optional = true }

# WebSocket support for Android communication
tungstenite = "0.21"
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"
