[package]
name = "flowx-python"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
flowx-core = { path = "../flowx-core", features = ["ai"] }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
tokio = { workspace = true, features = ["rt", "macros"] }
async-trait = { workspace = true }

[build-dependencies]
pyo3-build-config = "0.22"

[lib]
name = "flowx"
crate-type = ["cdylib"]
