[package]
name = "flowx-desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
tauri = { version = "2.11", features = ["devtools"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# FlowX core
flowx-core = { path = "../../flowx-core" }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
